--- a/gis.html
+++ b/gis.html
@@ -4,7 +4,7 @@
     <title>2DMap</title>
     <script src="https://www.openlayers.org/api/2.13/OpenLayers.js" type="text/javascript"></script>
     <!-- <SCRIPT language="JavaScript" type="text/javascript" src="http://map.vworld.kr/js/apis.do?type=Base&apiKey=767B7ADF-10BA-3D86-AB7E-02816B5B92E9"></SCRIPT> -->
-    <SCRIPT language="JavaScript" type="text/javascript" src="http://map.vworld.kr/js/apis.do?type=Base&apiKey=5616CAD1-5D79-3EE3-87D5-878A4AD0F91F"></SCRIPT>
+    <SCRIPT language="JavaScript" type="text/javascript" src="http://map.vworld.kr/js/apis.do?type=Base&apiKey="4B9CFB6E-92B6-310F-A7EB-125F612C5950"></SCRIPT>
       
     <script type="text/javascript">
       var map;
