--- a/pages/gis.html
+++ b/pages/gis.html
@@ -76,9 +76,7 @@ function setPanZoomBar()
 }
 </script> 
 </head>
- <body data-spy="scroll" data-target="#myAffix"> 
-    <div id="main" class="container main">
-	<div id="cont1" style="width:900px;height:600px;"></div>
-    </div>	 
+ <body> 
+	<div id="cont1" style="width:900px;height:600px;"></div> 
  </body>
 </html>
