--- a/pages/gis.html
+++ b/pages/gis.html
@@ -1,3 +1,9 @@
+---
+layout: page
+title: GIS
+comments: true
+permalink: /GIS/
+---
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
