--- a/pages/4_gis.html
+++ b/pages/4_gis.html
@@ -1,10 +1,14 @@
 ---
-layout: default
-title: GIS
+layout: post
+title: 지도기반 데이터 분석
 comments: true
 permalink: /GIS/
 ---
 
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>지도기반 데이터 분석</title>
 <SCRIPT language="JavaScript" type="text/javascript" src="http://map.vworld.kr/js/vworldMapInit.js.do?apiKey=5D56C2B3-315D-3150-A624-D231023FB396&domain=kaiser1227.github.io"></SCRIPT>
 <script type="text/javascript">
 var map = null;
@@ -70,5 +74,8 @@ function setPanZoomBar()
 	pZoomBar.redraw();
 }
 </script> 
-<div id="cont1" style="width:900px;height:600px;"></div> 
-
+</head>
+ <body> 
+	<div id="cont1" style="width:900px;height:600px;"></div> 
+ </body>
+</html>
