--- a/pages/4_gis.html
+++ b/pages/4_gis.html
@@ -1,11 +1,10 @@
 ---
 layout: post
-title: 지도기반 데이터 분석
+title: GIS
 comments: true
 permalink: /GIS/
 ---
 
-<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>지도기반 데이터 분석</title>
@@ -78,4 +77,3 @@ function setPanZoomBar()
  <body> 
 	<div id="cont1" style="width:900px;height:600px;"></div> 
  </body>
-</html>
