--- a/pages/4_gis.html
+++ b/pages/4_gis.html
@@ -2,7 +2,7 @@
 layout: post
 title: GIS
 comments: true
-permalink: /GIS/
+categories: GIS
 ---
 
 <SCRIPT language="JavaScript" type="text/javascript" src="http://map.vworld.kr/js/vworldMapInit.js.do?apiKey=5D56C2B3-315D-3150-A624-D231023FB396&domain=kaiser1227.github.io"></SCRIPT>
