Update and rename _posts/Work/2019-4-5-gis.html to pages/4_gis.html

--- a/pages/4_gis.html
+++ b/pages/4_gis.html
@@ -1,8 +1,8 @@
 ---
-layout: post
+layout: default
 title: GIS
 comments: true
-categories: GIS
+permalink: /GIS/
 ---
 
 <SCRIPT language="JavaScript" type="text/javascript" src="http://map.vworld.kr/js/vworldMapInit.js.do?apiKey=5D56C2B3-315D-3150-A624-D231023FB396&domain=kaiser1227.github.io"></SCRIPT>
