--- a/pages/4_gis.html
+++ b/pages/4_gis.html
@@ -70,4 +70,4 @@ function setPanZoomBar()
 	pZoomBar.redraw();
 }
 </script> 
-<div id="cont1" style="width:auto;height:auto;"></div> 
+<div id="cont1" style="width:100%;height:100%;"></div> 
