--- a/pages/4_gis.html
+++ b/pages/4_gis.html
@@ -1,5 +1,5 @@
 ---
-layout: gis
+layout: gis_layout
 title: GIS
 comments: true
 permalink: /GIS/
@@ -70,4 +70,4 @@ function setPanZoomBar()
 	pZoomBar.redraw();
 }
 </script> 
-<div id="cont1" style="width:100%;height:100%;"></div> 
+<div id="cont1" style="width:900px;height:600px;"></div> 
