--- a/pages/4_gis.html
+++ b/pages/4_gis.html
@@ -49,6 +49,9 @@ vw.ol3.MapOptions = {
    }
    
   };
+$(document).ready(function() { 
+    $("#containing-div").load("[url of page with onload function]"); 
+}); 
 </script>
 <SCRIPT language="JavaScript" type="text/javascript" src="https://map.vworld.kr/js/vworldMapInit.js.do?apiKey=5D56C2B3-315D-3150-A624-D231023FB396&domain=kaiser1227.github.io"></SCRIPT>
 <script type="text/javascript">
