--- a/pages/4_gis.html
+++ b/pages/4_gis.html
@@ -49,9 +49,6 @@ vw.ol3.MapOptions = {
    }
    
   };
-$(document).ready(function() { 
-    $("#containing-div").load("[url of page with onload function]"); 
-}); 
 </script>
 <SCRIPT language="JavaScript" type="text/javascript" src="https://map.vworld.kr/js/vworldMapInit.js.do?apiKey=5D56C2B3-315D-3150-A624-D231023FB396&domain=kaiser1227.github.io"></SCRIPT>
 <script type="text/javascript">
@@ -118,4 +115,6 @@ function setPanZoomBar()
 	pZoomBar.redraw();
 }
 </script> 
-<div id="cont1" style="width:900px;height:600px;" onload="javascript:move(latitude,longitude);"></div> 
+<div id="cont1" style="width:900px;height:600px;" ></div> 
+<button type="button" onclick="javascript:move(latitude,longitude);" name="mode1" >현재위치</button>
+	
